WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168796
[WebRTC] RealtimeOutgoingAudioSource does not need to upsample audio buffers
https://bugs.webkit.org/show_bug.cgi?id=168796
Summary
[WebRTC] RealtimeOutgoingAudioSource does not need to upsample audio buffers
youenn fablet
Reported
2017-02-23 13:09:51 PST
libwebrtc will do it on its own if needed
Attachments
Patch
(4.79 KB, patch)
2017-02-23 13:12 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.74 KB, patch)
2017-02-23 14:23 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-02-23 13:12:10 PST
Created
attachment 302566
[details]
Patch
Jer Noble
Comment 2
2017-02-23 14:12:21 PST
Comment on
attachment 302566
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=302566&action=review
> Source/WebCore/platform/mediastream/mac/RealtimeOutgoingAudioSource.cpp:40 > -static inline AudioStreamBasicDescription libwebrtcAudioFormat(size_t channelCount) > +static inline AudioStreamBasicDescription libwebrtcAudioFormat(size_t sampleRate, size_t channelCount)
sampleRate should probably be a float (or a Float64).
youenn fablet
Comment 3
2017-02-23 14:23:33 PST
Created
attachment 302576
[details]
Patch for landing
youenn fablet
Comment 4
2017-02-23 14:24:09 PST
Thanks for the review (In reply to
comment #2
)
> Comment on
attachment 302566
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=302566&action=review
> > > Source/WebCore/platform/mediastream/mac/RealtimeOutgoingAudioSource.cpp:40 > > -static inline AudioStreamBasicDescription libwebrtcAudioFormat(size_t channelCount) > > +static inline AudioStreamBasicDescription libwebrtcAudioFormat(size_t sampleRate, size_t channelCount) > > sampleRate should probably be a float (or a Float64).
Done
WebKit Commit Bot
Comment 5
2017-02-23 15:07:33 PST
Comment on
attachment 302576
[details]
Patch for landing Clearing flags on attachment: 302576 Committed
r212928
: <
http://trac.webkit.org/changeset/212928
>
WebKit Commit Bot
Comment 6
2017-02-23 15:07:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug