[WebRTC] RealtimeOutgoingAudioSource does not need to upsample audio buffers https://bugs.webkit.org/show_bug.cgi?id=168796

Patch by Youenn Fablet <youenn@apple.com> on 2017-02-23
Reviewed by Jer Noble.

Covered by manual testing.
Limiting RealtimeOutgoingAudioSource conversion to interleaving and float-to-integer.
Removed the sample rate conversion.

* platform/mediastream/mac/RealtimeOutgoingAudioSource.cpp:
(WebCore::libwebrtcAudioFormat):
(WebCore::RealtimeOutgoingAudioSource::audioSamplesAvailable):
(WebCore::RealtimeOutgoingAudioSource::pullAudioData):

Canonical link: https://commits.webkit.org/185803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212928 268f45cc-cd09-0410-ab3c-d52691b4dbfc